# SubgraphMatchingImplementation

./: .gitignore  CMakeLists.txt  README.md  test.md
src/: main.cpp
src/build_table/: build_table.cpp  build_table.h
src/command/: command.cpp  command.h
src/common/: alias.h  aux.h  config.h  vertex.h
src/engine/: match_engine.cpp  match_engine.h
src/enumerate/: enumerate.cpp  enumerate.h
src/filter/: filter.cpp  filter.h
src/graph/: graph.cpp  graph.h
src/order/: order.cpp  order.h
src/utility/graph_operations/: graph_operations.cpp  graph_operations.h
test/: expected_output.res  test.md  test.py
